[tool.poetry]
name = "web_modul_11"
version = "0.1.0"
description = ""
authors = ["Daniel Zubov <https://github.com/DanielDDZ>"]
readme = "README.md"
packages = [{include = "web_modul_11"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^2.0.3"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.4"
pydantic = "^1.10.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"